--- a/app/src/main/res/layout/activity_order_ship.xml
+++ b/app/src/main/res/layout/activity_order_ship.xml
@@ -40,7 +40,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginRight="5dp"
-                        android:textColor="@color/black"/>
+                        android:gravity="center_vertical"
+                        android:textColor="@color/red"
+                        android:textSize="18sp"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -67,7 +69,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginRight="5dp"
-                        android:textColor="@color/black"/>
+                        android:gravity="center_vertical"
+                        android:textColor="@color/red"
+                        android:textSize="18sp"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -97,7 +101,9 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginTop="10dp"
-                        android:textColor="@color/black"/>
+                        android:gravity="center_vertical"
+                        android:textColor="@color/red"
+                        android:textSize="18sp"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
