--- a/app/src/main/res/layout/activity_shop_info.xml
+++ b/app/src/main/res/layout/activity_shop_info.xml
@@ -279,7 +279,8 @@
                     android:background="@color/white"
                     android:orientation="horizontal"
                     android:paddingBottom="10dp"
-                    android:paddingTop="10dp">
+                    android:paddingTop="10dp"
+                    android:visibility="gone">
                     <LinearLayout
                         android:id="@+id/layout_profits_list"
                         android:layout_width="match_parent"
@@ -347,7 +348,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0.7dp"
-                    android:background="@color/line"/>
+                    android:background="@color/line"
+                    android:visibility="gone"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
