--- a/app/src/main/res/layout/activity_shop_info.xml
+++ b/app/src/main/res/layout/activity_shop_info.xml
@@ -32,13 +32,28 @@
                     android:layout_height="100dp"
                     android:src="@drawable/default_header"
                     android:visibility="gone"/>
-                <TextView
-                    android:id="@+id/tv_amount"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="0.00"
-                    android:textColor="@color/red"
-                    android:textSize="60sp"/>
+                    android:gravity="center"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/tv_amount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0.00"
+                        android:textColor="@color/red"
+                        android:textSize="60sp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="bottom"
+                        android:paddingBottom="10dp"
+                        android:paddingLeft="10dp"
+                        android:text="元"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"/>
+                </LinearLayout>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -108,6 +123,7 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
                     <TextView
+                        android:id="@+id/tv_people_count"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
@@ -130,6 +146,7 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
                     <TextView
+                        android:id="@+id/tv_recent_order_count"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
@@ -152,6 +169,7 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
                     <TextView
+                        android:id="@+id/tv_recent_sale_amount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
@@ -165,7 +183,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
                         android:gravity="center"
-                        android:text="七日营收"
+                        android:text="七日营收(元)"
                         android:textSize="16sp"/>
                 </LinearLayout>
             </LinearLayout>
