--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -8,10 +8,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <FrameLayout
-        android:id="@+id/tab"
         android:layout_width="match_parent"
         android:layout_height="@dimen/tab_main_height"
-        android:background="@color/colorPrimary"/>
+        android:background="@color/colorPrimary">
+        <FrameLayout
+            android:id="@+id/tab"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="60dp"/>
+        <ImageView
+            android:id="@+id/iv_share"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:padding="10dp"
+            android:src="@drawable/ic_share"/>
+    </FrameLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
