--- a/app/src/main/res/layout/layout_slide_main.xml
+++ b/app/src/main/res/layout/layout_slide_main.xml
@@ -42,7 +42,7 @@
     </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.7dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/line"/>
     <LinearLayout
@@ -169,6 +169,39 @@
                 android:layout_marginLeft="15dp"
                 android:layout_weight="1"
                 android:text="好友分享"
+                android:textColor="#000000"
+                android:textSize="18sp"/>
+            <ImageView
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/setting_right_arrow"/>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/line"/>
+        <LinearLayout
+            android:id="@+id/layout_news_list"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_orders"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_weight="1"
+                android:text="我的消息"
                 android:textColor="#000000"
                 android:textSize="18sp"/>
             <ImageView
